--- a/package.json
+++ b/package.json
@@ -6,16 +6,52 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write",
+    "test": "vitest --run --reporter verbose",
+    "test:w": "vitest",
+    "test:ui": "vitest --ui",
+    "test:c": "vitest run --coverage",
+    "test:cw": "vitest watch --coverage"
   },
   "dependencies": {
+    "click-to-react-component": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/coverage-c8": "^0.29.2",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "htmlhint": "^1.1.4",
+    "jsdom": "^21.1.1",
+    "postcss": "^8.4.21",
+    "postcss-lit": "^1.1.0",
+    "postcss-nesting": "^11.2.1",
+    "postcss-styled": "^0.34.0",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^2.8.4",
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard": "^30.0.1",
     "vite": "^4.1.0"
   }
 }
