--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.4",
     "stylelint": "^15.2.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-standard": "^30.0.1",
     "vite": "^4.1.0"
   }
