show gif images from giphy

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,15 +5,7 @@
     ],
     "customSyntax": "postcss-syntax",
     "rules": {
-        "declaration-colon-newline-after": "always-multi-line",
-        "property-no-unknown": [
-            true,
-            {
-                "ingnoreProperties": [
-                    "content-visibility"
-                ]
-            }
-        ]
+        "declaration-colon-newline-after": "always-multi-line"
     },
     "ignoreFiles": [
         "build/**",
