--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,6 @@
             "source.fixAll.stylelint"
         ],
     },
-    "dotenv.enableAutocloaking": true
+    "dotenv.enableAutocloaking": false,
+    "reactSnippets.settings.importReactOnTop": false
 }
