--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsdom": "^21.1.1",
     "postcss": "8.4.21",
     "postcss-cli": "10.1.0",
+    "postcss-purgecss": "5.0.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.4",
     "stylelint": "^15.2.0",
