add build paths for GHP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,8 @@
         ],
     },
     "dotenv.enableAutocloaking": false,
-    "reactSnippets.settings.importReactOnTop": false
+    "reactSnippets.settings.importReactOnTop": false,
+    "cSpell.words": [
+        "lcov"
+    ]
 }
