AddCategory test component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
     "reactSnippets.settings.importReactOnTop": false,
     "cSpell.words": [
         "lcov",
-        "picsum"
+        "Luffy",
+        "picsum",
+        "Saitama"
     ]
 }
