add gif grid test with mocks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     "dotenv.enableAutocloaking": false,
     "reactSnippets.settings.importReactOnTop": false,
     "cSpell.words": [
+        "Goku",
         "lcov",
         "Luffy",
         "picsum",
