exercise testing App componen by my own

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,9 +69,17 @@
     "reactSnippets.settings.importReactOnTop": false,
     "cSpell.words": [
         "Goku",
+        "Inuyasha",
+        "Kido",
         "lcov",
         "Luffy",
+        "Morty",
+        "Naruto",
         "picsum",
-        "Saitama"
+        "Ranma",
+        "Saitama",
+        "Saori",
+        "Saotome",
+        "Seiya"
     ]
 }
