remove coverage report

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 dist
+coverage
 dist-ssr
 *.local
 
@@ -29,4 +30,4 @@ dist-ssr
 .env*
 .flaskenv*
 !.env.project
-!.env.vault
+!.env.vault`
